--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ version = "0.0.2"
 [deps]
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 LightOSM = "d1922b25-af4e-4ba3-84af-fe9bea896051"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
