--- a/Project.toml
+++ b/Project.toml
@@ -10,4 +10,8 @@ LightOSM = "d1922b25-af4e-4ba3-84af-fe9bea896051"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [compat]
+julia = "1.6, 1.7"
 GraphMakie = "0.3"
+Graphs = "1.5"
+LightOSM = "0.1"
+Makie = "0.15"
