--- a/Project.toml
+++ b/Project.toml
@@ -14,5 +14,5 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 julia = "1.6"
 GraphMakie = "0.5"
 Graphs = "1.5"
-LightOSM = "0.2"
+LightOSM = "0.2, 0.3"
 Makie = "0.20"
