fixes for Makie v0.24

--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [compat]
 julia = "1.6"
-GraphMakie = "0.5"
+GraphMakie = "0.6.1"
 Graphs = "1.5"
 LightOSM = "0.2, 0.3"
-Makie = "0.20, 0.21, 0.22, 0.23, 0.24"
+Makie = "0.24"
